# openssh

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_old.md  package-lock.json  package.json  vite.config.js
.github/workflows/: android-quick.yml  release.yml  release_elctron.yml.bak
docs/: 重构进度.md
docs/plans/: 2025-02-23-sftp-design.md
scripts/: png2ico.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  sftp.rs  ssh.rs  test_sftp.rs  test_sftp2.rs
src/main/: config.js  crypto.js  db.js  index.js  ssh-manager.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.vue  i18n.js  main.js
src/renderer/src/api/: tauri-bridge.js
src/renderer/src/components/: HostDialog.vue  LightweightEditor.vue  MobileCustomKeyDialog.vue  MobileQuickKeys.vue  SettingsDialog.vue  SftpBreadcrumb.vue  SftpEditor.vue  SftpFileList.vue  SftpPane.vue  SftpPreview.vue  SftpToolbar.vue  SftpTree.vue  SftpTreeNode.vue  Sidebar.vue  TabBar.vue  TerminalPane.vue  TitleBar.vue  WelcomeScreen.vue
src/renderer/src/locales/: en.js  zh.js
src/renderer/src/styles/: global.css
