[package]
name = "openssh"
version = "0.3.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "fs", "net"] }
async-trait = "0.1"

aes-gcm = "0.10"
rand = "0.8"

uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

